--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -1249,7 +1249,9 @@ msg.payload = `
 
 <script type="text/x-red" data-help-name="wws-addFocus">
   <p>
-    This node allows to quickly add a custom focus to any message. See the documentation here .
+    This node allows to quickly add a custom focus to any message. See the documentation <a href="https://developer.watsonwork.ibm.com/docs/annotations/add-a-message-focus">here</a> .
+    <br />
+    This node works also with messages sent by <b>Applications</b>, in which the content is actually defined by the <b>generic Annotation</b> associated to the message. 
   </p>
 
   <h3>Inputs</h3>
