--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -1093,12 +1093,12 @@ msg.payload = `
  
   <h3>Inputs</h3>
   <dl class="message-properties">
-    <dt class="optional">wwsMemberList 
+    <dt class="optional">wwsPersonList 
       <span class="property-type">comma-separated string</span>
     </dt>
     <dd>
       The list of people whose details need to be retrieved.<br>
-      The value on the configuration panel overrides the value in <code>msg.wwsMemberList</code> (which is itself a string).
+      The value on the configuration panel overrides the value in <code>msg.wwsPersonList</code> (which is itself a string).
     </dd>
       
     <dt class="optional">wwsToken 
