Typo in wwsFilterAction documentation

--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -1680,12 +1680,13 @@ msg.payload = `
           <br />
           This is extermely useful when you need to process <b>actions-selected annotations corresponding to foci</b>: in fact, in the case, the <code>msg.payload</code>
           attribute will provide all the information (<b>payload, context, extractInfo...</b>) coming from the focus and that you may need to properly implement
-          the algorthm that corresponds to the <b>action-selected</b>. Here an example of output for an <b>actions-selected/b> annotation (<b>GetPhoto</b>) corresponding to 
+          the algorthm that corresponds to the <b>action-selected</b>. Here an example of output for an <b>actions-selected</b> annotation (<b>GetPhoto</b>) corresponding to 
           a lens (<b>photo</b>):
           <br />
           <img src="icons/node-red-contrib-wws/wws-focus-action-desc.png" />
           <br />
-          Note that this change in the <msg.payload output</b> only happens when a <b>lens</b> is specified as part of the <code>wwsActionList</code> attribute.
+          <b>Note</b><br />
+          The change in the <msg.payload output</b> only happens when a <b>lens</b> is specified as part of the <code>wwsActionList</code> attribute.
         </p>
         <p>
           <b>Note:</b><br>
